# arcaflow-plugin-fio

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: workflow.yaml
arcaflow_plugin_fio/: __main__.py  cli.py  fio_plugin.py  fio_schema.py  main.py
fixtures/: poisson-rate-submission_input.yaml
tests/: test_arcaflow_plugin_fio.py
